add feature : card product display with discounted logic ( need to styling more )

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* you can delete this element before work ! ( it stands for test the website display ) */
-:root {
-  background-color: #242424;
-}
+/* :root {
+  background-color: #ffffff;
+} */
